# data_commoms

./: CMakeLists.txt  README.md  compile_run.sh
include/: c_buffer.h  eth_comms.h  file_parser.h  logger.h  parser.h  timers.h
params/: data.csv  params.txt
src/: comms_main.c  file_main.c  main.c  save_params_txt.txt  test.md
tests/: CMakeLists.txt  compile_test.sh  parser_test.c
